--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <div data-theme="dark"></div>
     <title>Frenz</title>
   </head>
-  <body>
+  <body class="overflow-hidden">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
